chore: sync themes

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -10,3 +10,18 @@ Welcome to the official website of tkintertools, I hope this website can be of s
 {% endif %}
 
 {% endblock %}
+
+{% block content %}
+
+{% if config.theme.language == "zh" %}
+    <a href="javascript:void(window.print());" class="md-content__button md-icon" title="下载此页">
+        {% include ".icons/material/file-download.svg" %}
+    </a>
+{% else %}
+    <a href="javascript:void(window.print());" class="md-content__button md-icon" title="Download this page">
+        {% include ".icons/material/file-download.svg" %}
+    </a>
+{% endif %}
+
+{{ super() }}
+{% endblock content %}
