chore: update some links

--- a/overrides/main.html
+++ b/overrides/main.html
@@ -4,9 +4,9 @@
 {{ super() }}
 
 {% if config.theme.language == "zh" %}
-欢迎来到 tkintertools 的官方网站，希望本网站能对您有一定的帮助！
+欢迎来到 tkintertools 的官网，希望本站能对您有一定的帮助！如果您觉得很有帮助，可以<a href="/tkintertools/Sponsor">赞助我们</a>❤️！
 {% else %}
-Welcome to the official website of tkintertools, I hope this website can be of some help to you!
+Welcome to the official website of tkintertools, I hope this website can be of some help to you! If you find it helpful, you can <a href="/tkintertools/en/Sponsor">SPONSOR US</a>❤️!
 {% endif %}
 
 {% endblock %}
