--- a/overrides/main.html
+++ b/overrides/main.html
@@ -24,4 +24,4 @@ Welcome to the official website of tkintertools, I hope this website can be of s
 {% endif %}
 
 {{ super() }}
-{% endblock content %}
+{% endblock %}
